--- a/src/styles/root/gdpr-cookie.scss
+++ b/src/styles/root/gdpr-cookie.scss
@@ -30,7 +30,7 @@
   background-size: cover;
   background-position: 50% 30%;
 
-  z-index: 90;
+  z-index: 200;
 
   @media (--md) {
     padding: 30px 50px;
